# margrete-air-interpolator-aff

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
config/: config.h.in  config.ini.in  version.rc.in
src/: ArcNote.cpp  ArcNote.h  ArcParser.cpp  ArcParser.h  Common.hpp  DLLMain.cpp  DLLMain.h  Dialog.cpp  Dialog.h  Interpolator.cpp  Interpolator.h
tests/: .gitignore  1.aff  2.aff  test.cpp
